res/style.css
body {
	margin: 0px;
	padding: 0px;
}

pre code {

	margin-left: 150px;
	margin-top: 15%;

}

.codeheader {
	font-size: 24px;
	font-family: monospace;
	font-weight: bolder;
	text-align: left;
	color: #474949;
	padding-left: 140px;
	margin-top: 150px;
}

#frame {
	position: absolute;
	width: 100%;
	height: 100%;
	border: 0px;
}

#txt {
	position: absolute;
	top: 0px;
	left: 60%;
	width: 500px;
	margin-left: -250px;
	margin-top: 100px;
	padding-bottom: 300px;
	white-space: pre;
	font-family: monospace;
	font-size:11px;
}

#image {
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	margin-top: 33%;
	text-align: center;
}


#calendar {
	position: fixed;
	bottom: 70px;
	right: 40px;
	width: 150px;
	height: 200px;
	background: #FFF;
	margin: 0px;
	padding: 0px;


	font-size: 12px;
	font-family: monospace;
	z-index: 9000;
}

#calendar .top {
	float: left top;
	width:100%;
	height:188px;
	overflow-y: scroll;
}

#calendar .top ul {
	position: relative;
	list-style: none;
	margin-left: 0;
	padding-left: 1.2em;
}

#calendar .top ul li:before {
	content: ">> ";
	position: absolute;
	left: 0;
}

#calendar .bottom {
	float: left bottom;
	width: 100%;
	height: 12px;
	font-size: 11px;
	background: #CCC;
	text-align: center;
}

#calendar .bottom:hover {
	background: #666;
}

#calbutton {
	position: fixed;
	bottom: 20px;
	right: 40px;
	z-index: 9000;
}

